[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/inventory_deck/inventory_deck.gd" id="1"]

[node name="InventoryDeck" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 110.0
script = ExtResource("1")

[node name="DeckContainer" type="Control" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 90.0

[node name="CardBack1" type="ColorRect" parent="DeckContainer"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 64.0
offset_bottom = 84.0
color = Color(0.7, 0.65, 0.55, 1)

[node name="CardBack2" type="ColorRect" parent="DeckContainer"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 62.0
offset_bottom = 82.0
color = Color(0.8, 0.75, 0.65, 1)

[node name="CardTop" type="ColorRect" parent="DeckContainer"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 80.0
color = Color(0.9, 0.85, 0.75, 1)

[node name="CountLabel" type="Label" parent="DeckContainer"]
layout_mode = 0
offset_left = -5.0
offset_top = 85.0
offset_right = 65.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
